# pixeroo

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy-pages.yml
browser/chrome/: background.js  manifest.json
browser/edge/: README.txt  manifest.json
browser/firefox/: background-firefox.js  manifest.json
crates/: Cargo.toml
crates/src/: convert.rs  edit.rs  info.rs  lib.rs  qr.rs  svg.rs
crates/tests/: convert_tests.rs  edit_tests.rs  info_tests.rs  qr_tests.rs
scripts/: build-help-docs.cjs  build-pwa.cjs  build-store.cjs  generate-icons-from-svg.js  generate-icons.js
shared/styles/: input.css
shared/utils/: color-utils.js  image-utils.js
shared/wasm/: loader.js
tests/e2e/: batch.spec.js  colors.spec.js  compress.spec.js  convert.spec.js  draw.spec.js  edit-operations.spec.js  editor.spec.js  fixtures.spec.js  help.spec.js  helpers.js  info.spec.js  navigation.spec.js  popup.spec.js  screenshots.spec.js  svg.spec.js  tools.spec.js
tests/extension/: detector.test.js  manifest.test.js
tests/fixtures/: README.md
tests/pwa/: pwa.test.js
tests/scripts/: download-exif-samples.cjs  generate-fixtures.cjs
tests/unit/: batch-filename.test.js  pipeline-resize.test.js  svg-tool.test.js
tests/utils/: color-utils.test.js  image-utils.test.js
website/: changelog.html  contact.html  features.html  index.html  privacy.html
website/docs/: changelog.html  contact.html  features.html  index.html  privacy.html
website/help/: batch.html  callout.html  certificate.html  collage.html  colors.html  compare.html  compress.html  convert.html  draw.html  edit.html  faq.html  fonts.html  generate.html  gif.html  index.html  info.html  library.html  meme.html  popup.html  pwa.html  qr.html  shortcuts.html  showcase.html  sidepanel.html  social.html  store.html  svg.html  watermark.html
website/pwa/: app.js  batch-tool.js  callout-tool.js  certificate-tool.js  collage-tool.js  colors-tool.js  compare-tool.js  draw-tool.js  edit-tool.js  editor.js  (+19 more)
(+73 files in other folders)
