[package]
name = "pixeroo-wasm"
version = "0.1.0"
edition = "2021"
description = "Pixeroo WASM engine - image processing, format conversion, QR codes, metadata extraction"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Blob", "ImageData"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Core image processing (disable rayon for WASM single-threaded)
image = { version = "0.25", default-features = false, features = [
  "png", "jpeg", "gif", "webp", "bmp", "tiff", "ico", "tga",
  "qoi", "pnm", "hdr", "dds", "exr", "avif"
] }

# Advanced image processing
imageproc = { version = "0.26", default-features = false }
imgref = "1.12"

# PNG with APNG support
png = "0.18"

# JPEG
zune-jpeg = { version = "0.5", default-features = false, features = ["std"] }
jpeg-encoder = { version = "0.7", default-features = false, features = ["std"] }

# WebP
image-webp = "0.2"

# AVIF
ravif = { version = "0.13", optional = true }
avif-serialize = { version = "0.8", optional = true }

# TIFF
tiff = "0.11"

# QOI
qoi = "0.4"

# ICO
ico = "0.5"

# SVG
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.11"

# QR Code (generate + read)
qrcode = { version = "0.14", default-features = false }
qrcodegen = "1.8"
rxing = { version = "0.6", default-features = false }

# Metadata / EXIF
kamadak-exif = "0.6"
rexif = "0.7"
img-parts = "0.4"
jfifdump = "0.6"

# Image size probing (lightweight)
imagesize = "0.14"

# MIME type detection
tree_magic_mini = { version = "3.2", default-features = false }

[features]
default = ["core"]
core = []
avif-encode = ["ravif", "avif-serialize"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
